# discord-streak

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  lefthook.yml  main.py  pyproject.toml
docs/: deployment.md  development.md
scripts/: check-version-bump.sh
src/: __init__.py  __main__.py  client.py  config.py  logger.py  main.py  server.py  types.py
src/engine/: __init__.py  runner.py
src/models/: __init__.py  config.py  results.py
src/utils/: __init__.py  errors.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_engine.py
tests/unit/: test_models.py
