[project]
name = "discord-streak"
version = "1.0.0"
description = "Keep your Discord activity streak alive by maintaining online presence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.14.10"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
